--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@ and open the template in the editor.
     </header>
     <div id="settingsPageContent" class="pagecontainer">
       <div class="about">
-        <h4> I'm Adelaja Ibrahim Abiola,I am a versatile frontend engineer with a solid background in Computer Science.
+        <h4> I'm Adelaja Ibrahim Abiola, I am a versatile frontend engineer with a solid background in Computer Science.
           I develop smooth applications with responsive User interfaces and awesome user experience. I build and
           interpret mockups for both mobile and web applications. </h4>
         <br />
         <p style="padding: 6px; background-color: #ff1d1d; color: aliceblue"> Note: This App was created since 2017 and hasn't been maintained since then. It's online incase anyone
-          whats to pick one or two things, I'll be glad to help either. </p>
+          wants to pick one or two things, I'll be glad to help either. </p>
           <br />
           <p>
             Follow me:
