follow cursor pointer

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@ and open the template in the editor.
           
           <p>Portfolio: <a href="https://portfolio.adescode.com/" target="_blank">Adescode Portfolio</a></p>
           <p>Twitter: <a href="https://twitter.com/adescode" target="_blank">Adescode</a></p>
-          <p>Github: <a href="https://github.com/adescode">Adescode</a></p>
-          <p>LinkedIn: <a href="https://linkedin.com/in/adescode/">Adescode</a></p>
-          <p>Instagram: <a href=" https://www.instagram.com/adescode_/">Adescode_</a></p>
+          <p>Github: <a href="https://github.com/adescode" target="_blank">Adescode</a></p>
+          <p>LinkedIn: <a href="https://linkedin.com/in/adescode/" target="_blank">Adescode</a></p>
+          <p>Instagram: <a href=" https://www.instagram.com/adescode_/" target="_blank">Adescode_</a></p>
       </div>
     </div>
   </div>
